@@ -43,8 +43,6 @@
       <b>LilyPond 1.6</b>
     </a>
 
-  <li>A WikiWiki with comments on the documentation is
-    <a href="http://afavant.elte.hu/lywiki/">here</a>.
   </li>
 </ul>
 
@@ -59,55 +57,5 @@ You may have to install a separate package such as <tt>lilypond-doc</tt>.
 
 <h2>Support</h2>
 
-<!-- FIXME copied in about/index.html !-->
-<ul>
-  <li>Send comments on these pages to
-    <tt><a href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
-    (mailing list
-    <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>,
-    search
-    <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>)
-  </li>
+@contact.ihtml@
 
-  <li>Learn about the latest releases by subscribing to
-    <tt><a href="mailto:info-lilypond@gnu.org">info-lilypond@gnu.org</a></tt>
-    (mailing list
-    <a href="http://mail.gnu.org/mailman/listinfo/info-lilypond">info</a>,
-    search
-    <a href="http://mail.gnu.org/archive/html/info-lilypond/">archive</a>)
-  </li>
-
-  <li>Send questions and comments on LilyPond to
-    <tt><a href="mailto:lilypond-user@gnu.org">lilypond-user@gnu.org</a></tt>
-    (mailing list
-    <a href="http://mail.gnu.org/mailman/listinfo/lilypond-user">info</a>,
-    search
-    <a href="http://mail.gnu.org/archive/html/lilypond-user/">archive</a>)
-    <br>
-  </li>
-
-  <li>Send bug reports to
-    <tt><a href="mailto:bug-lilypond@gnu.org">bug-lilypond@gnu.org</a></tt>
-    (mailing list
-    <a href="http://mail.gnu.org/mailman/listinfo/bug-lilypond">info</a>,
-    search
-    <a href="http://mail.gnu.org/archive/html/bug-lilypond/">archive</a>)
-    <br>
-  </li>
-  
-  <li>Contact the developers by subscribing to
-    <tt><a href="mailto:lilypond-devel@gnu.org">lilypond-devel@gnu.org</a></tt>
-    (mailing list 
-    <a href="http://mail.gnu.org/mailman/listinfo/lilypond-devel">info</a>,
-    search
-    <a href="http://mail.gnu.org/archive/html/lilypond-devel/">archive</a>)
-  </li>
-
-  <li>
-    For contacting the authors, see
-    <a href="@DOC@v2.2/Documentation/topdocs/out-www/AUTHORS.html">the
-      author list</a>.
-    (<em>Only contact the authors directly for strictly personal
-      communication</em>)
-  </li>
-</ul>
